<resources>
    <string name="app_name">a001</string>
    <string name="btn_toTextView">TextViwe</string>
    <string name="tv_1">我是一个测试的普通textView</string>
    <string name="tv_2">我是显示不全的</string>
    <string name="tv_3">筛选</string>
    <string name="tv_4">下划线</string>
    <string name="tv_5">下划线</string>
    <string name="tv_7">跑马灯跑马灯跑马灯跑马灯跑马灯跑马灯跑马灯跑马灯跑马灯跑马灯跑马灯跑马灯跑马灯跑马灯跑马灯</string>
    <string name="btn_toButton">Button</string>
    <string name="btn_1">普通按钮</string>
    <string name="btn_2">圆角按钮</string>
    <string name="btn_3">描边按钮</string>
    <string name="btn_4">阴影按钮</string>
    <string name="btn_EditText">Eidttext</string>
    <string name="et_username_p">用户名</string>
    <string name="et_password_p">密码</string>
    <string name="et_phone_p">手机号</string>
    <string name="et_login">登录</string>
    <string name="btn_Radio">Radio</string>
    <string name="radio_man">男</string>
    <string name="radio_woman">女</string>
    <string name="btn_CheckBox">CheckBox</string>
    <string name="cb_title">你会那些移动开发：</string>
    <string name="cb_skill_1">Android</string>
    <string name="cb_skill_2">ios</string>
    <string name="cb_skill_3">HTML5</string>
    <string name="cb_skill_4">其他</string>
    <string name="cb_interest">你的兴趣:</string>
    <string name="cb_interest_1">番剧</string>
    <string name="cb_interest_2">编程</string>
    <string name="btn_ImageView">ImageView</string>
    <string name="btn_ListView">ListView</string>
    <string name="Hello">Hello</string>
    <string name="data">2020-9-4</string>
    <string name="content">这是内容</string>
    <string name="btn_GridView">GridView</string>
    <string name="ScrollView">ScrollView</string>
    <string name="btn_linearView">列表视图</string>
    <string name="btn_RecyclerView">RecyclerView</string>
    <string name="btn_horizontalView">水平滚动</string>
    <string name="PuRecyclerView">瀑布流</string>
    <string name="btn_WebView">WebView</string>
    <string name="btn_Toast">Toast</string>
    <string name="moren">默认</string>
    <string name="changeLocation">改变位置</string>
    <string name="toastImg">自定义图片</string>
    <string name="toToastUtil">ToastUtil</string>
    <string name="btn_dialog">Dialog</string>
    <string name="UI">UI</string>
    <string name="Ui">UI</string>
    <string name="style1">style1</string>
    <string name="style4">style4</string>
    <string name="style3">style3</string>
    <string name="style2">style2</string>
    <string name="style5">style5</string>
    <string name="btn_Progress">Progress</string>
    <string name="pdBegin">模拟进度条</string>
    <string name="ProgressDialog1">ProgressDialog1</string>
    <string name="ProgressDialog2">ProgressDialog2</string>
    <string name="btn_CustomDialog">CustomDialog</string>
    <string name="customDialog">自定义Dialog</string>
    <string name="Tip">提示</string>
    <string name="del">删除？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="message">删除？</string>
    <string name="btn_PopupWindow">PopupWindow</string>
    <string name="Pop">Pop</string>
    <string name="good">好</string>
    <string name="pop_not_good">一般</string>
    <string name="bad">不好</string>
    <string name="Activity">Activity</string>
    <string name="Jump">Jump</string>
    <string name="jump_toB">jumpToB</string>
    <string name="finish">Finish</string>
    <string name="jump_toA">Jump_toA</string>
    <string name="BtoA">BtoA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AFragment">AFragment</string>
    <string name="BFragment">BFragment</string>
    <string name="Fragment">Fragment</string>
    <string name="changeFragment">changeFragment</string>
    <string name="sendMesg">sendMsg</string>
    <string name="sendMsg">sendMsg</string>
    <string name="Event">事件机制</string>
    <string name="click_me">click me</string>
    <string name="my_Button">My Button</string>
    <string name="Handler">Handler</string>
    <string name="Data">数据存储</string>
    <string name="SharedPreferences">SharedPreferences</string>
    <string name="File">File</string>
    <string name="save">保存</string>
    <string name="btn_data_show">显示</string>
    <string name="et_data_msg">输入要保存的数据</string>
    <string name="test_name">343</string>
</resources>
