<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ui"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btn_Activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Activity"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btn_Jump"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Jump"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btn_Fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fragment"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btn_Event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Event"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"/>


</LinearLayout>