<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TextViewActivity">

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_1"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="100dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:text="@string/tv_2"
        android:textSize="24sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"
        android:drawableEnd="@drawable/icon_sx_1"
        android:textColor="#000000"
        android:textSize="24sp"
        android:text="@string/tv_3"/>

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_4"
        android:textSize="24sp"
        android:layout_marginTop="10dp" />
    <TextView
        android:id="@+id/tv_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_5"
        android:textSize="24sp"
        android:layout_marginTop="10dp" />
    <TextView
        android:id="@+id/tv_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/tv_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_7"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:singleLine="true"
        android:focusableInTouchMode="true"/>





</LinearLayout>