<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".datastorage.FileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_name"/>

    <EditText
        android:id="@+id/et_file_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_data_msg"/>
    <Button
        android:id="@+id/btn_file_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save"/>
    <Button
        android:id="@+id/btn_file_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_data_show"/>
    <TextView
        android:id="@+id/tv_file_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>



</LinearLayout>