<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToastActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_toast_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moren" />
    <Button
        android:id="@+id/btn_toast_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeLocation" />
    <Button
        android:id="@+id/btn_toast_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toastImg" />

</LinearLayout>