<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toLinearView"
        android:text="@string/btn_linearView"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toHorizontalView"
        android:text="@string/btn_horizontalView"
        android:textAllCaps="false" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toPuRecyclerView"
        android:text="@string/PuRecyclerView"
        android:textAllCaps="false" />

</LinearLayout>