<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/editbox_background_normal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_good"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorGray"
        android:text="@string/good"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/dividerBlock"/>
    <TextView
        android:id="@+id/tv_not_good"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorGray"
        android:text="@string/pop_not_good"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/dividerBlock"/>
    <TextView
        android:id="@+id/tv_bad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorGray"
        android:text="@string/bad"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />


</LinearLayout>