<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_custom_dialog">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/custom_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tip"
            android:textSize="20sp"
            android:textColor="@color/dividerBlock"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/custom_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/dividerBlock"
            android:text="@string/message"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dividerBlock" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/custom_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="20sp"
                android:textColor="@color/colorBlue"
                android:gravity="center" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark" />
            <TextView
                android:id="@+id/custom_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textSize="20sp"
                android:textColor="@color/colorBlue"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>